cors refined and some endpoints fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+cors.allowed-origins=${ALLOWED_HOST:http://localhost:3000}
+cors.allowed-methods=GET,POST,DELETE,OPTIONS, PUT
