Horse search endpoint added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.org.springframework.security=DEBUG
 
 cors.allowed-origins=${ALLOWED_HOST:http://localhost:3000}
 cors.allowed-methods=GET,POST,DELETE,OPTIONS, PUT
+
+dijugratas.api.url=https://dijugratas.hu/Competitors/SearchHorseAll
+dijugratas.api.progKey=${DIJUGRATASHU_PROG_KEY}
