--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ cors.allowed-methods=GET,POST,DELETE,OPTIONS, PUT
 
 dijugratas.api.url=https://dijugratas.hu/Competitors/SearchHorseAll
 dijugratas.api.progKey=${DIJUGRATASHU_PROG_KEY}
+
+okta.oauth2.audience=${OKTA_OAUTH2_AUDIENCE}
+okta.oauth2.issuer=${OKTA_OAUTH2_ISSUER}
