horse search fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,7 @@ logging.level.org.springframework.security=DEBUG
 cors.allowed-origins=${ALLOWED_HOST:http://localhost:3000}
 cors.allowed-methods=GET,POST,DELETE,OPTIONS, PUT
 
-dijugratas.api.url=https://dijugratas.hu/Competitors/SearchHorseAll
-dijugratas.api.progKey=${DIJUGRATASHU_PROG_KEY}
+mlosz.api.host=https://mlosz.hu
 
 okta.oauth2.audience=${OKTA_OAUTH2_AUDIENCE}
 okta.oauth2.issuer=${OKTA_OAUTH2_ISSUER}
